<resources>
    <string name="app_name">Estoque Camisaria</string>
    <string name="camisas">Camisas</string>
    <string name="camisetas">Camisetas</string>
    <string name="listar_camisa">Listar Camisas</string>
    <string name="listar">Listar</string>
    <string name="adicionar">Adicionar</string>
    <string name="gerenciar_camisas">Gerenciar camisas</string>
    <string name="editar">Editar</string>
    <string name="tipo"><b>TIPO</b></string>
    <string name="tamanho"><b>TAMANHO</b></string>
    <string name="cor"><b>COR</b></string>
    <string name="salvar">Salvar</string>
    <string name="nome"><b>NOME</b></string>
    <string name="excluir">Excluir</string>
    <string name="certeza_msm">Certeza?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="listar_camisetas">Listar camisetas</string>
    <string name="gerenciar_camisetas">Gerenciar camisetas</string>
    <string name="listarCamisetas">Listar camisetas</string>
    <string name="configuracoes">Configurações</string>
    <string name="qtde"><b>QTDE</b></string>
</resources>