<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewIdListarCamisetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        />
// tipo
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tipo" />
    <TextView
        android:id="@+id/textViewTipoListarCamisetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

//tamanho
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tamanho" />
    <TextView
        android:id="@+id/textViewTamanhoListarCamisetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
   // cor
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cor" />
    <TextView
        android:id="@+id/textViewCorListarCamisetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    //qtde
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/qtde" />
    <TextView
        android:id="@+id/textViewQtdeListarCamisetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>